--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -44,6 +44,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+          cache: 'pip'
+          cache-dependency-path: '**/pyproject.toml'
       - name: Load cached Poetry installation
         if: matrix.os != 'windows-latest'
         uses: actions/cache@v2
@@ -55,13 +57,6 @@ jobs:
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-      - name: Python cache
-        uses: actions/cache@v2
-        id: cached-poetry-dependencies
-        with:
-          path: |
-            ~/.cache/
-          key: venv-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.pytorch }}-${{ hashFiles('DeepFilterNet/pyproject.toml') }}
       - name: Install runtime dependencies and DeepFilterNet
         working-directory: DeepFilterNet
         run: |
