ci: Run test_df after publish during release process

--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -12,6 +12,8 @@ on:
 
 jobs:
   test-df-output:
+    if: ${{ always() }}
+    needs: [publish-pypi-wheels]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
