--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -27,10 +27,15 @@ python = ">=3.7,<4.0"
 typing_extensions = "^4.0"
 numpy = ">=1.20,<2.0"
 loguru = ">=0.5"
-soundfile = { version = "^0.10", optional = true, extras = ["soundfile"] }
-icecream = { version = ">=2,<3", optional = true, extras = ["train"] }
-pystoi = { version = "^0.3", optional = true, extras = ["eval"] }
-semetrics = {git = "https://github.com/usimarit/semetrics.git", optional = true, extras = ["eval"]}
+soundfile = { version = "^0.10", optional = true }
+icecream = { version = ">=2,<3", optional = true }
+pystoi = { version = "^0.3", optional = true }
+semetrics = {git = "https://github.com/usimarit/semetrics.git", optional = true}
+
+[tool.poetry.extras]
+train = ["deepfilterdataloader", "icecream"]
+eval = ["pystoi", "semetrics"]
+soundfile = ["soundfile"]
 
 [tool.poetry.scripts]
 deepFilter = "df.enhance:main"
