--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DeepFilterDataLoader"
-version = "0.1.10"
+version = "0.1.11-pre"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
 
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
-deep_filter = { features = ["dataset"], version = "0.1.10" }
+deep_filter = { features = ["dataset"], path = "../libDF" }
 pyo3 = { version = "^0.15", default_features = true, features = ["extension-module"]}
 numpy = "^0.15"
 ndarray = "^0.15"
