--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -4,13 +4,11 @@ on:
   push:
     branches:
       - main
-    tags-ignore:
-      - "v*[0-9]+.[0-9]+.[0-9]+"
   pull_request:
     branches:
       - main
   workflow_run:
-    workflows: ["publish-DeepFilterNet"]
+    workflows: ["publish-pypi-wheels"]
     branches: [main]
     types:
       - completed
@@ -19,6 +17,7 @@ on:
 
 jobs:
   test-df-output:
+    if: "!contains(github.event.head_commit.message, 'v*[0-9]+.[0-9]+.[0-9]+')"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
