--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -71,7 +71,9 @@ jobs:
       - name: Install Octave
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install --no-install-recommends octave
-      - name: Run Test
+      - name: Run some Rust Tests
+        run: cargo run test_mix_audio_signal
+      - name: Run DF Test
         working-directory: DeepFilterNet
         run: |
           source $VENV
