--- a/.github/workflows/clippy_check.yml
+++ b/.github/workflows/clippy_check.yml
@@ -21,8 +21,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {command: fmt, rust: nightly}
-          - {command: clippy, rust: stable}
+          - {command: fmt, rust: nightly, args: '--all -- --check'}
+          - {command: clippy, rust: stable, args: '-- -D warnings'}
+          - {command: test, rust: stable, args: 'test_mix_audio_signal'}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -44,4 +45,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: ${{matrix.command}}
-          args: "${{matrix.command == 'fmt' && '--all -- --check' || '-- -D warnings'}}"
+          args: ${{matrix.args}}
