--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/lib.rs"
 default = []
 
 transforms = ["thiserror", "ndarray"]
-dataset = ["thiserror", "ndarray", "hdf5", "rand", "rand_xoshiro", "rayon", "serde_json", "serde", "lewton", "ogg", "hound", "rubato", "bincode"]
+dataset = ["thiserror", "ndarray", "hdf5", "rand", "rand_xoshiro", "rayon", "crossbeam-channel", "serde_json", "serde", "lewton", "ogg", "hound", "rubato", "bincode"]
 
 [dependencies]
 rustfft = "^6.0.1"
@@ -30,6 +30,7 @@ hdf5 = { version="^0.8", optional=true }
 bincode = { version="^1.3", optional=true }
 ndarray = { version="^0.15", optional=true, features=["serde"] }
 rayon = { version="1.5", optional=true }
+crossbeam-channel = { version="^0.5", optional=true }
 serde_json = { version="1.0", optional=true }
 serde = { version = "1.0", features = ["derive"], optional=true }
 lewton = { version = "^0.10", optional=true }
