libdf: Create output directory for tests

--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -47,3 +47,8 @@ jobs:
         with:
           command: ${{matrix.command}}
           args: ${{matrix.args}}
+      - uses: actions/upload-artifact@v2
+        if: matrix.command == 'test'
+        with:
+          name: test-artifacts
+          path: out/
