--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -12,5 +12,5 @@ path = "src/lib.rs"
 [dependencies]
 deep_filter = { features = ["dataset"], path = "../libDF" }
 pyo3 = { version = "^0.15", default_features = true, features = ["extension-module"]}
-numpy = "^0.15"
+numpy = ">=0.15.1,<0.16"
 ndarray = "^0.15"
