--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -41,6 +41,7 @@ claxon = { version = "^0.4", optional=true }
 
 [dev-dependencies]
 rand = "0.8"
+rstest = "0.12"
 
 [package.metadata.deb]
 assets = [
