ci: Test no default features

--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -23,6 +23,7 @@ jobs:
       matrix:
         include:
           - {command: fmt, rust: nightly, args: '--all -- --check'}
+          - {command: build, rust: stable, args: '--no-default-features'}
           - {command: build, rust: stable, args: '--all-features'}
           - {command: build, rust: nightly, args: '--all-features'}
           - {command: clippy, rust: stable, args: '--all-features -- -D warnings'}
