--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -28,15 +28,14 @@ rubato = { version="0.10", optional=true }
 rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
 hound = { version="3.4", optional=true }
-# hdf5 = { version="^0.8", optional=true }
-hdf5 = { path="/home/hendrik/ext_src/hdf5-rust", optional=true }
+hdf5 = { version="^0.8", optional=true, git="https://github.com/aldanor/hdf5-rust/", rev="refs/pull/198/head" }
 bincode = { version="^1.3", optional=true }
 ndarray = { version="^0.15", optional=true, features=["serde"] }
 rayon = { version="1.5", optional=true }
 crossbeam-channel = { version="^0.5", optional=true }
 serde_json = { version="1.0", optional=true }
 serde = { version = "1.0", features = ["derive"], optional=true }
-lewton = { version = "^0.10", optional=true, path="/home/hendrik/ext_src/lewton/"  }
+lewton = { version = "^0.10", optional=true }
 ogg = { version = "^0.8", optional=true }
 claxon = { version = "^0.4", optional=true }
 
