--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
-deep_filter = { features = ["dataset"], path = "../libDF" }
+deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
 pyo3 = { version = "^0.15", default_features = true, features = ["extension-module"]}
 numpy = ">=0.15.1,<0.16"
 ndarray = "^0.15"
