pydfdata: Backtrace improvements

--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -12,11 +12,10 @@ path = "src/lib.rs"
 [features]
 default = []
 
-backtrace = ["anyhow"]
+backtrace = []
 
 [dependencies]
 deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
 pyo3 = { version = "^0.16", default_features = true, features = ["extension-module"]}
 numpy = "^0.16"
 ndarray = "^0.15"
-anyhow = { version = "^1.0", features = ["backtrace"], optional = true }
