--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -12,6 +12,11 @@ readme = "../README.md"
 name = "df"
 path = "src/lib.rs"
 
+[[bin]]
+name = "dataset-sample"
+path = "src/bin/ds-sample.rs"
+required-features = ["dataset", "anyhow"]
+
 [features]
 default = []
 
@@ -27,6 +32,7 @@ rand = { version="0.8", optional=true }
 rubato = { version="0.11", optional=true }
 rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
+anyhow = { version="1.0", optional=true }
 hound = { version="3.4", optional=true }
 hdf5 = { version="^0.8", optional=true, git="https://github.com/aldanor/hdf5-rust/", rev="refs/pull/198/head" }
 bincode = { version="^1.3", optional=true }
