ci: Add pre-commit hooks

--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -41,7 +41,8 @@ soundfile = ["soundfile"]
 deepFilter = "df.enhance:main"
 
 [tool.poetry.dev-dependencies]
-poethepoet = "^0.11.0"
+poethepoet = "^0.11"
+pre-commit = "^2.17"
 
 [tool.poe.tasks]
 install-torch-cuda111 = "python -m pip install torch==1.10.0 torchaudio==0.10.0 --extra-index-url https://download.pytorch.org/whl/cu111/"
