--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -30,11 +30,13 @@ loguru = ">=0.5"
 soundfile = { version = "^0.10", optional = true }
 icecream = { version = ">=2,<3", optional = true }
 pystoi = { version = "^0.3", optional = true }
-semetrics = {git = "https://github.com/rikorose/semetrics.git", optional = true}
+scipy = { version = "^1", optional = true }
+semetrics = {git = "https://github.com/usimarit/semetrics.git", optional = true}
 
 [tool.poetry.extras]
 train = ["deepfilterdataloader", "icecream"]
-eval = ["pystoi", "semetrics"]
+eval = ["pystoi", "pesq", "scipy"]
+semetrics = ["semetrics"]
 soundfile = ["soundfile"]
 
 [tool.poetry.scripts]
