--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -30,6 +30,7 @@ loguru = ">=0.5"
 soundfile = { version = "^0.10", optional = true }
 icecream = { version = ">=2,<3", optional = true }
 pystoi = { version = "^0.3", optional = true }
+pesq = { version = "^0.0.3", optional = true }
 scipy = { version = "^1", optional = true }
 semetrics = {git = "https://github.com/usimarit/semetrics.git", optional = true}
 
