--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -39,7 +39,7 @@ rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
 anyhow = { version="1.0", optional=true, features=["backtrace"] }
 hound = { version="3.4", optional=true }
-hdf5 = { version="^0.8", optional=true, git="https://github.com/aldanor/hdf5-rust/", rev="refs/pull/198/head" }
+hdf5 = { version="^0.8", optional=true, features=["blosc"], git="https://github.com/aldanor/hdf5-rust/", rev="refs/pull/198/head" }
 bincode = { version="^1.3", optional=true }
 ndarray = { version="^0.15", optional=true, features=["serde"] }
 rayon = { version="1.5", optional=true }
