--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -12,5 +12,6 @@ path = "src/lib.rs"
 [dependencies]
 deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
 pyo3 = { version = "^0.16", default_features = true, features = ["extension-module"]}
+crossbeam-channel = "^0.5"
 numpy = "^0.16"
 ndarray = "^0.15"
