--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -26,7 +26,7 @@ required-features = ["dataset", "anyhow"]
 default = []
 
 transforms = ["thiserror", "ndarray"]
-dataset = ["thiserror", "ndarray", "hdf5", "rand", "rand_xoshiro", "rayon", "crossbeam-channel", "serde_json", "serde", "hound", "rubato"]
+dataset = ["thiserror", "ndarray", "hdf5", "rand", "rand_xoshiro", "rayon", "crossbeam-channel", "serde_json", "serde", "hound", "rubato", "roots"]
 vorbis = ["lewton", "ogg"]
 flac = ["claxon"]
 cache = ["sled", "bincode"]
@@ -37,6 +37,7 @@ realfft = "^3.0.0"
 num-complex = { version = "^0.4", features=["serde"] }
 rand = { version="0.8", optional=true }
 rubato = { version="0.11", optional=true }
+roots = { version="0.0.7", optional=true }
 rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
 anyhow = { version="1.0", optional=true, features=["backtrace"] }
