--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -51,7 +51,7 @@ serde = { version = "1.0", features = ["derive"], optional=true }
 lewton = { version = "^0.10", optional=true }
 ogg = { version = "^0.8", optional=true }
 claxon = { version = "^0.4", optional=true }
-sled = { version = "^0.34", optional=true }
+sled = { version = "^0.34", features = ["compression"], optional=true }
 bincode = { version = "2.0.0-rc", default-features = false, features = ["std", "serde"], optional=true }
 
 [dev-dependencies]
