libdf/pydfdata: Improve log interface and integrate it into loguru's logging

--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -19,6 +19,7 @@ deep_filter = { features = [
 pyo3 = { version = "^0.16", default_features = true, features = [
   "extension-module",
 ] }
+log = { version = "0.4", features = ["std"] }
 crossbeam-channel = "^0.5"
 numpy = "^0.16"
 ndarray = "^0.15"
