--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -15,12 +15,17 @@ path = "src/lib.rs"
 [[bin]]
 name = "sample-hdf5"
 path = "src/bin/sample-hdf5.rs"
-required-features = ["dataset", "anyhow", "rand"]
+required-features = ["dataset", "bin", "rand"]
 
 [[bin]]
 name = "sample-dataset"
 path = "src/bin/sample-dataset.rs"
-required-features = ["dataset", "anyhow"]
+required-features = ["dataset", "bin"]
+
+[[bin]]
+name = "fix-sample-attrs"
+path = "src/bin/fix-sample-attrs-hdf5.rs"
+required-features = ["dataset", "bin"]
 
 [features]
 default = []
@@ -45,6 +50,7 @@ dataset_timings = []
 vorbis = ["lewton", "ogg"]
 flac = ["claxon"]
 cache = ["sled", "bincode"]
+bin = ["anyhow", "ctrlc"]
 
 [dependencies]
 rustfft = "^6.0.1"
@@ -57,6 +63,7 @@ roots = { version = "0.0.7", optional = true }
 rand_xoshiro = { version = "0.6", optional = true }
 thiserror = { version = "1.0", optional = true }
 anyhow = { version = "1.0", optional = true, features = ["backtrace"] }
+ctrlc = { version = "3.2", optional = true }
 hound = { version = "3.4", optional = true }
 hdf5 = { version = "^0.8", optional = true, git = "https://github.com/aldanor/hdf5-rust/" }
 ndarray = { version = "^0.15", optional = true, features = ["serde"] }
