--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 env:
   CARGO_TERM_COLOR: always
@@ -20,13 +22,13 @@ jobs:
         manylinux: [2014]
         python:
           # CPython
-          - version: 3.7
+          - version: "3.7"
             abi: cp37-cp37m
-          - version: 3.8
+          - version: "3.8"
             abi: cp38-cp38
-          - version: 3.9
+          - version: "3.9"
             abi: cp39-cp39
-          - version: 3.10
+          - version: "3.10"
             abi: cp310-cp310
         platform:
           - target: aarch64-unknown-linux-gnu
