df: Fix arguments for deepFilter script

--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -41,7 +41,7 @@ semetrics = ["semetrics"]
 soundfile = ["soundfile"]
 
 [tool.poetry.scripts]
-deepFilter = "df.enhance:main"
+deepFilter = "df.enhance:run"
 
 [tool.poetry.dev-dependencies]
 poethepoet = "^0.11"
