--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "deep_filter"
 version = "0.1.11"
+resolver = "2"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
 description = "Noise supression using deep filtering"
@@ -39,7 +40,7 @@ rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
 anyhow = { version="1.0", optional=true, features=["backtrace"] }
 hound = { version="3.4", optional=true }
-hdf5 = { version="0.8.1", optional=true, git="https://github.com/aldanor/hdf5-rust/" }
+hdf5 = { version="0.8.1", features=["blosc"], optional=true }
 bincode = { version="^1.3", optional=true }
 ndarray = { version="^0.15", optional=true, features=["serde"] }
 rayon = { version="1.5", optional=true }
@@ -49,6 +50,9 @@ serde = { version = "1.0", features = ["derive"], optional=true }
 lewton = { version = "^0.10", optional=true }
 ogg = { version = "^0.8", optional=true }
 claxon = { version = "^0.4", optional=true }
+
+[replace]
+"hdf5:0.8.1" = { git="https://github.com/aldanor/hdf5-rust", rev="d71b03e" }
 
 [dev-dependencies]
 rand = "0.8"
