--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "DeepFilterNet"
-version = "0.1.11"
+version = "0.1.12-pre"
 description = "Noise supression using deep filtering"
 authors = ["Hendrik Schröter"]
 repository = "https://github.com/Rikorose/DeepFilterNet"
@@ -21,8 +21,8 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-deepfilterlib = "0.1.11"
-deepfilterdataloader = { version = "0.1.11", optional = true }
+deepfilterlib = { path = "../pyDF/" }
+deepfilterdataloader = { path = "../pyDF-data/", optional = true }
 python = ">=3.7,<4.0"
 typing_extensions = "^4.0"
 numpy = ">=1.20,<2.0"
@@ -32,6 +32,7 @@ icecream = { version = ">=2,<3", optional = true }
 pystoi = { version = "^0.3", optional = true }
 pesq = { version = "^0.0.3", optional = true }
 scipy = { version = "^1", optional = true }
+semetrics = {git = "https://github.com/usimarit/semetrics.git", optional = true}
 
 [tool.poetry.extras]
 train = ["deepfilterdataloader", "icecream"]
