--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -89,6 +89,8 @@ jobs:
       - name: Install runtime dependencies and DeepFilterNet
         working-directory: DeepFilterNet
         run: |
+          source $VENV
+          poetry --version
           poetry env use ${{matrix.python}}
           poetry install --no-interaction -E eval ${{env.EXTRA}}
           poetry run poe install-torch-cpu
