--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -38,6 +38,7 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v2
+
       # Aditionally test against original matlab composite metrics
       - name: Set Extra Dependency Ubuntu
         if: matrix.os == 'ubuntu-latest'
@@ -48,6 +49,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           echo "EXTRA=-E soundfile" >> $GITHUB_ENV
+
+      # Rust installation
       - name: Rust cache
         uses: actions/cache@v2
         with:
@@ -62,6 +65,8 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with: {profile: "minimal", toolchain: "stable"}
+
+      # Python and poetry install
       - name: Install Python
         uses: actions/setup-python@v3
         with:
@@ -72,34 +77,40 @@ jobs:
         with:
           path: ~/.local
           key: poetry-${{ runner.os }}-${{ matrix.python }}-1
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Load cached venv
-        id: cached-poetry-dependencies
+      - name: Bootstrap poetry
+        run: |
+          curl -sL https://install.python-poetry.org | python - -y
+      - name: Update PATH
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Update Path for Windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+      - name: Configure poetry
+        run: poetry config virtualenvs.in-project true
+      - name: Set venv up cache
         uses: actions/cache@v2
+        id: cache
         with:
-          path: |
-            .venv
-            DeepFilterNet/.venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-1
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/pyproject.toml') }}
+      - name: Ensure venv cache is healthy
+        if: steps.cache.outputs.cache-hit == 'true'
+        run: timeout 10s poetry run pip --version || rm -rf .venv
+
+      # Install DeepFilterNet and dependencies
       - name: Install runtime dependencies and DeepFilterNet
         working-directory: DeepFilterNet
         run: |
-          # ls .venv || echo "not found"
-          # ls ../.venv || echo "not found"
-          source $VENV
           poetry --version
-          poetry env use ${{matrix.python}}
           poetry install --no-interaction -E eval ${{env.EXTRA}}
           poetry run poe install-torch-cpu
       - name: Install Octave
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install --no-install-recommends octave
+
+      # Run tests
       - name: Run DF Test
         working-directory: DeepFilterNet
         run: |
-          source $VENV
-          python df/scripts/test_df.py
+          poetry run python df/scripts/test_df.py
