--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -92,7 +92,9 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: .venv
+          path: |
+            .venv
+            DeepFilterNet/.venv
           key: venv-${{ runner.os }}-${{ matrix.python }}-${{ hashFiles('**/pyproject.toml') }}
 
       # Install DeepFilterNet and dependencies
